# COVID-YouGovSurveyAnalysis

./: .gitignore  README.md  pyproject.toml
analysis/: outcome_analysis.Rmd  randomization_assessment.Rmd  rmd_setup.R
data/: TPL_Testing_Survey_FirstWave_RI.sav
data/Fifth_Wave/: TPL_Testing_Survey_FifthWave_YouGov.sav
data/Fourth_Wave/: TPL_Testing_Survey_FourthWave_YouGov.sav  TPL_Testing_Survey_FourthWave_YouGov_MERGEDWITHTHIRDWAVEFORMESSING.sav
data/Second_Wave/: Qualtrics_2020-10-08.sav  README.md  YouGov_2020-10-19.sav
data/Seventh_wave/: TPL_Testing_Survey_SeventhWave_YouGov.sav
data/Sixth_wave/: TPL_Testing_Survey_SixthWave_YouGov_RI.sav  TPL_Testing_Survey_SixthWave_YouGov_RI_with_past_IDs.sav  TPL_Testing_Survey_SixthWave_YouGov_US.sav  TPL_Testing_Survey_SixthWave_YouGov_US_with_past_IDs.sav
data/Third_Wave/: TPL_Testing_Survey_ThirdWave_Qualtrics.sav  TPL_Testing_Survey_ThirdWave_YouGov.sav  TPL_Testing_Survey_ThirdWave_YouGov_RhodeIslandonly.sav
paper/: No_evidence_that_collective_good_appeals_best_promote_Covid_related_health_behaviors.docx  No_evidence_that_collective_good_appeals_best_promote_Covid_related_health_behaviors.md  README.md
src/10_first_wave/: 00_data_cleaning.sps  10_RI_Whole_sample.sps  20_RI_by_demographics.sps  30_RI_beliefs_about_testing_by_demographics.sps
src/20_october_2020_oversample_18_29/: 00_fix_coding_error_in_qualtrics_survey.sps  01_data_merge_and_cleanup.sps  10_descriptives_for_state_before_close_of_survey.sps  20_comparisons_by_age_range.sps  README.md
src/30_third_wave/: 10_Qualtrics_full_analysis.sps  (+6 more)
(+31 files in other folders)
