[tool.poetry]
name = "covid-yougovsurveyanalysis"
version = "0.1.0"
description = ""
authors = ["Kevin Wilson <khwilson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
jupyter = "^1.0.0"
numpy = "^1.22.2"
scipy = "^1.7.3"
pandas = "^1.4.0"
matplotlib = "^3.5.1"
pyreadstat = "^1.1.4"
geopandas = "^0.10.2"
Rtree = "^0.9.7"
openpyxl = "^3.0.9"
statsmodels = "^0.13.1"
seaborn = "^0.11.2"
missingno = "^0.5.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
nbqa = "^1.2.3"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
